change the layout of the html fields

--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -25,7 +25,7 @@ label.valueWithoutVAT = Value without VAT
 label.taxBase = Tax Base (BGN):
 label.valueOfVAT = Value of VAT (BGN):
 label.paymentAmount = Payment amount (BGN):
-label.num = Num
+label.num = pieces
 
 # Languages
 lang.bg = Bulgarian
