convert to euro

--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -19,12 +19,12 @@ label.supplier = Supplier
 label.id= ID
 label.name= Name
 label.quantity = Quantity
-label.unitPriceWithoutVAT = Unit prive without VAT
+label.unitPriceWithoutVAT = Unit price without VAT(EUR)
 label.vatPercentage = VAT Percentage
-label.valueWithoutVAT = Value without VAT
-label.taxBase = Tax Base (BGN):
-label.valueOfVAT = Value of VAT (BGN):
-label.paymentAmount = Payment amount (BGN):
+label.valueWithoutVAT = Value without VAT(EUR)
+label.taxBase = Tax Base (EUR):
+label.valueOfVAT = Value of VAT (EUR):
+label.paymentAmount = Payment amount (EUR):
 label.num = pieces
 
 # Languages
